--- a/signup/signup.html
+++ b/signup/signup.html
@@ -155,7 +155,7 @@
 
                 <!-- Login Link -->
                 <div class="login-link">
-                    <p>¿Ya tienes una cuenta? <a href="#">Inicia sesión aquí</a></p>
+                    <p>¿Ya tienes una cuenta? <a href="/login/login.html">Inicia sesión aquí</a></p>
                 </div>
             </div>
         </div>
